# sis_international

./: .gitignore  README.md  main.py  pyproject.toml  workflow.drawio
files/utilities/: base_project_filter.csv
modules/constants/: main.py  pyproject.toml
modules/constants/constants.egg-info/: PKG-INFO  SOURCES.txt
modules/csv_tools/: main.py  pyproject.toml
modules/csv_tools/csv_tools.egg-info/: PKG-INFO  SOURCES.txt
modules/database/: database.py  pyproject.toml
modules/database/database.egg-info/: PKG-INFO  SOURCES.txt
modules/million_verifier_api/: million_verifier_api.py  pyproject.toml
modules/million_verifier_api/million_verifier_api.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
modules/project_class/: main.py  pyproject.toml
modules/project_class/project_class.egg-info/: PKG-INFO  SOURCES.txt
modules/utilities/: main.py  pyproject.toml
modules/utilities/utilities.egg-info/: PKG-INFO  SOURCES.txt
