[project]
name = "uv_workspace"
version = "0.1.0"
description = "sis international app workspace"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "project_class",
    "csv_tools",
    "utilities",
    "constants",
    "million_verifier_api"
]

[tool.uv.sources]
project_class = { workspace = true }
csv_tools = { workspace = true }
utilities = { workspace = true }
constants = { workspace = true }
million_verifier_api = { workspace = true }

[tool.uv.workspace]
members = ["modules/*"]

